--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.6.4",
     "babel": "^6.23.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
