--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "babel": "^6.23.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "isomorphic-fetch": "^3.0.0"
+    "isomorphic-fetch": "^3.0.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "jest": "^29.6.4"
